--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>Golden College</title>
 <link href="raghu.css" rel="stylesheet" type="text/css" />
+<link rel="icon" href="logo.jpg">
 </head>
 
 
